<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InputFragment">

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:layout_marginBottom="@dimen/vertical_padding"
            android:text="@string/id"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:layout_marginBottom="@dimen/vertical_padding"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/time"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:layout_marginBottom="@dimen/vertical_padding"
            android:text="@string/time"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:layout_marginBottom="@dimen/vertical_padding"
            android:text="@string/result"
            app:layout_constraintBottom_toTopOf="@+id/location"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:layout_marginBottom="48dp"
            android:text="@string/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="128dp" />

        <EditText
            android:id="@+id/editId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:ems="10"
            android:hint="000000"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/id"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/date"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <EditText
            android:id="@+id/editTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:ems="10"
            android:inputType="time"
            app:layout_constraintBaseline_toBaselineOf="@+id/time"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <Spinner
            android:id="@+id/editResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/result"
            app:layout_constraintEnd_toEndOf="@+id/editDate"
            app:layout_constraintStart_toStartOf="@+id/editDate"
            app:layout_constraintTop_toTopOf="@+id/result" />

        <Spinner
            android:id="@+id/editLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintEnd_toEndOf="@+id/editResult"
            app:layout_constraintStart_toStartOf="@+id/editResult"
            app:layout_constraintTop_toTopOf="@+id/location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
